[package]
authors = ["Matthew Collins"]
name = "univercity"
version = "1.0.0"
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
bitflags = "1.2.1"
chrono = "0.4.9"
png = "0.15.1"
rand = "0.7.2"
rayon = "1.2.1"
serde = "1.0.102"
serde_derive = "1.0.102"
serde_json = "1.0.41"
serde-transcode = "1.1.0"
serde_cbor = "0.10.2"
slog = "2.5.2"
slog-async = "2.3.0"
slog-json = "2.3.0"
slog-term = "2.4.2"
smallvec = "1.0.0"
url = "2.1.0"
rusttype = "0.8.2"
sdl2 = "0.32.2"
fungui = "0.1.1"
ogg_metadata = "0.4.1"

[dependencies.delta_encode]
git = "https://github.com/thinklibs/delta_encode.git"
rev = "693c0ae648e52f350118c641e865bfb827671610"

[dependencies.error-chain]
default-features = false
features = ["backtrace"]
version = "0.12.1"

[dependencies.gl33]
path = "./gl33"

[dependencies.gpuopt]
path = "./gpuopt"

[dependencies.model]
path = "./model"

[dependencies.univercity_audio]
path = "./audio"

[dependencies.think_ecs]
path = "./ecs"

[dependencies.univercity_server]
path = "./server"

[dependencies.univercity_util]
path = "./util"

[features]
debugutil = [
    "univercity_server/debugutil",
    "slog/release_max_level_debug",
]
system_alloc = []
steam = [ "univercity_server/steam" ]
default = []

[profile.dev]
opt-level = 1
codegen-units = 64

[profile.release]
debug = 1
lto = false
# codegen-units = 16
debug-assertions = false
# panic = "abort"

[workspace]
members = [
    "./assets-builder",
    "./audio",
    "./dedicated-server",
    "./ecs",
    "./gl33",
    "./gpuopt",
    "./lua",
    "./lua/lua-sys",
    "./model",
    "./server",
    "./util",
    "./crash-decode",
]


[replace]
"https://github.com/jan-auer/pdb#0.5.0" = { git = "https://github.com/Thinkofname/pdb", rev = "e06695d8462dc993ed02b3afce66dffd3d23da73" }
