[package]
authors = ["Matthew Collins"]
name = "univercity_util"
version = "0.1.0"
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
byteorder = "1.3.2"
cgmath = "0.17.0"
serde = "1.0.102"
serde_derive = "1.0.102"
slog = "2.5.2"
backtrace = "0.3.40"
fnv = "1.0.6"
delta_encode = { git = "https://github.com/thinklibs/delta_encode.git", rev = "693c0ae648e52f350118c641e865bfb827671610", features=["cgmath"] }
# reqwest = "0.9.20"
serde_json = "1.0.41"
